fix logo position safari

--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -32,11 +32,8 @@ category: Layout
   visibility: hidden;
   display: none;
   @include susy-breakpoint($break-large) {
-    position: relative;
-    float: left;
     visibility: visible;
     display: block;
-    top: 15px;
     margin-right: 10px;
   }
   & img {
